# btc-purchasing-power

./: .gitignore  README.md  app.js  diff.txt  index.html  main.py  pyproject.toml  styles.css
data/: btc_usd.json  gold_usd.json  housing_midwest.json  housing_northeast.json  housing_south.json  housing_us_median.json  housing_west.json  sp500.json
scripts/: update_prices.py
